--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </nav>
         <div class="index-logo">
           <a href="#">
-            <img src="img/logo.png" width="100" height="50" alt="Седона">
+            <img src="img/logo.png" alt="Седона">
           </a>
         </div>
       </div>
