--- a/index.html
+++ b/index.html
@@ -25,11 +25,9 @@
               <a href="#">Карта штата</a>
           </ul>
         </nav>
-        <div class="index-logo">
-          <a href="#">
-            <img src="img/logo.png" alt="Седона">
-          </a>
-        </div>
+        <a class="index-logo" href="#">
+          <img src="img/logo.png" alt="Седона">
+        </a>
       </div>
     </header>
     <main class="container">
@@ -42,7 +40,7 @@
       <div class="picture-reason">
         <div class="picture-description">
           <h2 class="picture-header">Настоящий городок</h2>
-          <div>-№1-</div>
+          <div>&mdash;№1&mdash;</div>
           <p class="picture-text">Седона - не аттракцион для туристов, там течет своя жизнь</p>
         </div>
           <div class="picture">
@@ -69,7 +67,7 @@
       <div class="picture-reason-reverse">
          <div class="picture-description-reverse">
            <h2 class="picture-header-reverse">Там есть мост дьявола</h2>
-           <div>-№2-</div>
+           <div>&mdash;№2&mdash;</div>
            <p class="picture-text-reverse">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
         </div>
           <div class="picture">
@@ -79,17 +77,17 @@
       <section class="reason-list-nopicture">
         <div class="reason-point-nopicture">
           <h2>Небольшая площадь</h2>
-          <div>-№3-</div>
+          <div>&mdash;№3&mdash;</div>
           <p>Все достопримечательности находятся очень близко</p>
         </div>
         <div class="reason-point-nopicture">
           <h2>Красивая дорога</h2>
-          <div>-№4-</div>
+          <div>&mdash;№4&mdash;</div>
           <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </div>
         <div class="reason-point-nopicture">
           <h2>Мало туристов</h2>
-          <div>-№5-</div>
+          <div>&mdash;№5&mdash;</div>
           <p>Большинство едет в Гранд Каньон и толпится там</p>
         </div>
       </section>
