--- a/catalog.html
+++ b/catalog.html
@@ -52,12 +52,21 @@
             <label for="apartments">Апартаменты</label>
           </div>
           <div class="search-form-small-basis search-form-small-right">
-            <h2 class="minor-header-form">Стоимость в сутки (р):</h2>
-            <label for="price-in">От 0</label>
-            <input type="range" name="price-from" id="price-in" min="0" max="10000" step="100" value="3000">
-            <label for="price-out">До 3000</label>
-            <input type="range" name="price-to" id="price-out" min="0" max="10000" step="100" value="0">
-            <input type="submit" value="Показать">
+            <div class="filter-range">
+              <div class="filter-range-title">Стоимость в сутки (р):</div>
+              <div class="price-controls">
+                <label class="min-price">от <input type="text" name="min-price" value="0"></label>
+                <label class="max-price">до <input type="text" name="max-price" value="3000"></label>
+              </div>
+              <div class="range-controls">
+                <div class="scale">
+                  <div class="bar"></div>
+                </div>
+                <div class="range-toggle range-toggle-min"></div>
+                <div class="range-toggle range-toggle-max"></div>
+              </div>
+              <button class="btn-transparent" type="submit">Показать</button>
+            </div>
           </div>
         </form>
       </div>
