--- a/index.html
+++ b/index.html
@@ -94,12 +94,14 @@
       <section class="if-interest-block">
         <div class="if-interest-content">
           <span class="main-question">Заинтересовались?</span>
-          <p class="main-answer">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <p class="main-answer">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        </div>
+        <div class="search-open">
+          <h3 class="search-name">Поиск гостиницы в Седоне</h3>
         </div>
       </section>
-      <div class="search-block">
+      <div class="search-block map">
         <div class="search-basis">
-          <h3 class="search-name">Поиск гостиницы в Седоне</h3>
           <form class="search-form" action="#" method="post">
             <div class="search-row search-first-row">
               <label for="date-in">Дата заезда:</label>
@@ -125,7 +127,7 @@
       </div>
     </main>
     <footer class="container">
-      <div class="footer-main">
+      <div class="footer-main footer-opacity">
         <section class="hashtag">
           <span>#Visitsedona</span>
         </section>
