Hover and focus started

--- a/index.html
+++ b/index.html
@@ -105,19 +105,19 @@
           <form class="search-form" action="#" method="post">
             <div class="search-row search-first-row">
               <label for="date-in">Дата заезда:</label>
-              <input class="date-in"type="date" id="date-in" name="date-in">
+              <input class="date-in"type="text" id="date-in" name="date-in">
             </div>
             <div class="search-row search-second-row">
               <label for="date-out">Дата выезда:</label>
-              <input class="date-out" type="date" id="date-out" name="date-out">
+              <input class="date-out" type="text" id="date-out" name="date-out">
             </div>
             <div class="search-row search-third-row">
               <label for="adults">Взрослые:</label>
-              <input class="adults" type="number" id="adults" name="adults" max="100" min="1" value="2">
+              <input class="adults" type="text" id="adults" name="adults" max="100" min="1" value="2">
             </div>
             <div class="search-row search-fourth-row">
               <label for="children">Дети:</label>
-              <input class="children" type="number" id="children" name="children" max="100" min="1" value="0">
+              <input class="children" type="text" id="children" name="children" max="100" min="1" value="0">
             </div>
             <div class="search-form-button">
               <input type="submit" value="Найти">
