--- a/catalog.html
+++ b/catalog.html
@@ -18,8 +18,8 @@
             <li class="navigation-element left-navigation">
               <a href="#">Фото и видео</a>
             </li>
-            <li class="navigation-element right-navigation">
-              <a href="#">Гостиницы</a>
+            <li class="navigation-element right-navigation active">
+              <a>Гостиницы</a>
             </li>
             <li class="navigation-element right-navigation">
               <a href="#">Карта штата</a>
@@ -94,7 +94,7 @@
               <img class="article-img" src="img/hotel3.jpg" alt="Фото">
             </div>
             <div class="hotel-description">
-              <h3 class= "hotel-name">Amara resort & spa</h3>
+              <a class= "hotel-name" href="#">Amara resort & spa</a>
               <div class="article-text">
                 <div class="article-info">Гостиница</div>
                 <div class="article-price">От 4000 р.</div>
@@ -123,7 +123,7 @@
               <img class="article-img" src="img/hotel2.jpg" alt="Фото">
             </div>
             <div class="hotel-description">
-              <h3 class= "hotel-name">Desert quail inn</h3>
+              <a class= "hotel-name" href="#">Desert quail inn</a>
               <div class="article-text">
                 <div class="article-info">Мотель</div>
                 <div class="article-price">От 3000 р.</div>
@@ -151,7 +151,7 @@
               <img class="article-img" src="img/hotel1.jpg" alt="Фото">
             </div>
             <div class="hotel-description">
-              <h3 class= "hotel-name">Villas at poco diablo</h3>
+              <a class= "hotel-name" href="#">Villas at poco diablo</a>
               <div class="article-text">
                 <div class="article-info">Апартаменты</div>
                 <div class="article-price">От 2000 р.</div>
