--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   </head>
   <body>
+  <div class="wrapper">
     <header class="main-header">
       <div class="container">
         <nav class="main-navigation">
@@ -144,5 +145,6 @@
         </section>
       </div>
     </footer>
+  </div>
   </body>
 </html>
