--- a/catalog.html
+++ b/catalog.html
@@ -191,8 +191,7 @@
         </section>
         <section class="footer-copyright">
           <span class="html-academy">Website by</span>
-          <a class="copyright-img" href="https://htmlacademy.ru">
-            <img src="img/htmlacademy.png" alt="HTML academy">
+          <a class="copyright-img link-img" href="https://htmlacademy.ru">
           </a>
         </section>
       </div>
