--- a/index.html
+++ b/index.html
@@ -106,19 +106,21 @@
           <form class="search-form" action="#" method="post">
             <div class="search-row search-first-row">
               <label for="date-in">Дата заезда:</label>
-              <input class="date-in"type="text" id="date-in" name="date-in">
+              <input class="date-in"type="text" id="date-in" name="date-in" placeholder="24 апреля 2017">
+              <button class="calendar calendar-first" type="button" title="Календарь">Календарь</button>
             </div>
             <div class="search-row search-second-row">
               <label for="date-out">Дата выезда:</label>
-              <input class="date-out" type="text" id="date-out" name="date-out">
+              <input class="date-out" type="text" id="date-out" name="date-out" placeholder="4 июля 2017">
+              <button class="calendar calendar-second" type="button" title="Календарь">Календарь</button>
             </div>
             <div class="search-row search-third-row">
               <label for="adults">Взрослые:</label>
-              <input class="adults" type="text" id="adults" name="adults" max="100" min="1" value="2">
+              <input class="adults" type="text" id="adults" name="adults" placeholder="2">
             </div>
             <div class="search-row search-fourth-row">
               <label for="children">Дети:</label>
-              <input class="children" type="text" id="children" name="children" max="100" min="1" value="0">
+              <input class="children" type="text" id="children" name="children" placeholder="0">
             </div>
             <div class="search-form-button">
               <input type="submit" value="Найти">
@@ -139,8 +141,7 @@
         </section>
         <section class="footer-copyright">
           <span class="html-academy">Website by</span>
-          <a class="copyright-img" href="https://htmlacademy.ru">
-            <img src="img/htmlacademy.png" alt="HTML academy">
+          <a class="copyright-img link-img" href="https://htmlacademy.ru">
           </a>
         </section>
       </div>
