Form styles ready

--- a/index.html
+++ b/index.html
@@ -116,11 +116,15 @@
             </div>
             <div class="search-row search-third-row">
               <label for="adults">Взрослые:</label>
+              <button class="minus-button" type="button" title="Минус">-</button>
               <input class="adults" type="text" id="adults" name="adults" placeholder="2">
+              <button class="plus-button" type="button" title="Плюс">+</button>
             </div>
             <div class="search-row search-fourth-row">
               <label for="children">Дети:</label>
+              <button class="minus-button" type="button" title="Минус">-</button>
               <input class="children" type="text" id="children" name="children" placeholder="0">
+              <button class="plus-button" type="button" title="Плюс">+</button>
             </div>
             <div class="search-form-button">
               <input type="submit" value="Найти">
