--- a/catalog.html
+++ b/catalog.html
@@ -26,7 +26,7 @@
               <a href="#">Карта штата</a>
           </ul>
         </nav>
-        <a class="index-logo" href="#">
+        <a class="index-logo" href="index.html">
           <img src="img/logo.png" alt="Седона">
         </a>
       </div>
