--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <a href="#">Фото и видео</a>
             </li>
             <li class="navigation-element right-navigation">
-              <a href="#">Гостиницы</a>
+              <a href="catalog.html">Гостиницы</a>
             </li>
             <li class="navigation-element right-navigation">
               <a href="#">Карта штата</a>
