--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
       <div class="promo-picture">
       </div>
       <div class="promo-block">
-          <h1>Седона - небольшой городок в Аризоне, заслуживающий большего</h3>
+          <h1>Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
           <span class="promo-speech"> Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</span>
       </div>
       <div class="picture-reason">
         <div class="picture-description">
           <h2 class="picture-header">Настоящий городок</h2>
-          <div>&mdash;№1&mdash;</div>
+          <div class="picture-number">&mdash;№1&mdash;</div>
           <p class="picture-text">Седона - не аттракцион для туристов, там течет своя жизнь</p>
         </div>
           <div class="picture">
@@ -51,24 +51,24 @@
       <section class="reason-list">
         <div class="reason-point">
           <img src ="img/house.png" alt="Жилье">
-          <h2>Жилье</h2>
+          <h2 class="reason-header">Жилье</h2>
           <span>Рекомендуем пожить в настоящем мотеле, все как в кино!</span>
         </div>
         <div class="reason-point">
           <img src ="img/food.png" alt="Еда">
-          <h2>Еда</h2>
+          <h2 class="reason-header">Еда</h2>
           <span>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</span>
         </div>
         <div class="reason-point">
           <img src ="img/present.png" alt="Сувениры">
-          <h2>Сувениры</h2>
+          <h2 class="reason-header">Сувениры</h2>
           <span>Не только китайского, но и местного производства!</span>
         </div>
       </section>
       <div class="picture-reason-reverse">
          <div class="picture-description-reverse">
            <h2 class="picture-header-reverse">Там есть мост дьявола</h2>
-           <div>&mdash;№2&mdash;</div>
+           <div class="picture-number-reverse">&mdash;№2&mdash;</div>
            <p class="picture-text-reverse">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
         </div>
           <div class="picture">
@@ -77,17 +77,17 @@
       </div>
       <section class="reason-list-nopicture">
         <div class="reason-point-nopicture">
-          <h2>Небольшая площадь</h2>
+          <h2 class="reason-header-nopicture">Небольшая площадь</h2>
           <div>&mdash;№3&mdash;</div>
           <p>Все достопримечательности находятся очень близко</p>
         </div>
         <div class="reason-point-nopicture">
-          <h2>Красивая дорога</h2>
+          <h2 class="reason-header-nopicture">Красивая дорога</h2>
           <div>&mdash;№4&mdash;</div>
           <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </div>
         <div class="reason-point-nopicture">
-          <h2>Мало туристов</h2>
+          <h2 class="reason-header-nopicture">Мало туристов</h2>
           <div>&mdash;№5&mdash;</div>
           <p>Большинство едет в Гранд Каньон и толпится там</p>
         </div>
@@ -134,7 +134,7 @@
       </div>
     </main>
     <footer class="container">
-      <div class="footer-main footer-opacity">
+      <div class="footer-main footer-opacity clearfix">
         <section class="hashtag">
           <span>#Visitsedona</span>
         </section>
