--- a/catalog.html
+++ b/catalog.html
@@ -102,7 +102,7 @@
               <a class= "hotel-name" href="#">Amara resort & spa</a>
               <div class="article-text">
                 <div class="article-info">Гостиница</div>
-                <div class="article-price">От 4000 р.</div>
+                <div class="article-price-amara">От 4000 р.</div>
               </div>
               <div class="btn">
                 <a class="more-btn" href="#">Подробнее</a>
@@ -131,7 +131,7 @@
               <a class= "hotel-name" href="#">Desert quail inn</a>
               <div class="article-text">
                 <div class="article-info">Мотель</div>
-                <div class="article-price">От 3000 р.</div>
+                <div class="article-price-desert">От 3000 р.</div>
               </div>
               <div class="btn">
                 <a class="more-btn" href="#">Подробнее</a>
@@ -159,7 +159,7 @@
               <a class= "hotel-name" href="#">Villas at poco diablo</a>
               <div class="article-text">
                 <div class="article-info">Апартаменты</div>
-                <div class="article-price">От 2000 р.</div>
+                <div class="article-price-villas">От 2000 р.</div>
               </div>
               <div class="btn">
                 <a class="more-btn" href="#">Подробнее</a>
@@ -180,7 +180,7 @@
       </div>
     </main>
     <footer class="container">
-      <div class="footer-main">
+      <div class="footer-main clearfix">
         <section class="hashtag">
           <span>#Visitsedona</span>
         </section>
