CSS list corrected

--- a/catalog.html
+++ b/catalog.html
@@ -191,7 +191,7 @@
         </section>
         <section class="footer-copyright">
           <span class="html-academy">Website by</span>
-          <a class="copyright-img link-img" href="https://htmlacademy.ru">
+          <a class="copyright-img link-img" href="https://htmlacademy.ru/intensive/htmlcss">
           </a>
         </section>
       </div>
